testsuite/tests/name_resolution/test_expect_fail/test.out
Analyzing test.adb
##################

Resolving xrefs for node <AssignStmt test.adb:7:4-7:16>
*******************************************************

A failure was expected but name resolution succeeded:

Expr: <Id "B" test.adb:7:4-7:5>
  references:    <DefiningName "B" test.adb:5:4-5:5>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: None
Expr: <CallExpr test.adb:7:9-7:15>
  references:    <DefiningName "C" test.adb:3:13-3:14>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
Expr: <Id "C" test.adb:7:9-7:10>
  references:    <DefiningName "C" test.adb:3:13-3:14>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: None
Expr: <Int test.adb:7:12-7:14>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] in Standard>
  expected type: <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>

13:4: Expect `Expect_Fail` argument, got: Expect_Fial
Resolving xrefs for node <CallStmt test.adb:16:4-16:11>
*******************************************************

Name resolution failed as expected with:

test.adb:16:4: error: resolution failed
16 |    C (12);
   |    ^^^^^^^


Resolving xrefs for node <CallStmt test.adb:20:4-20:11>
*******************************************************

test.adb:20:4: error: resolution failed
20 |    C (12);
   |    ^^^^^^^


Resolving xrefs for node <CallStmt test.adb:24:4-24:11>
*******************************************************

Name resolution failed as expected with:

test.adb:24:4: error: resolution failed
24 |    C (12);
   |    ^^^^^^^


28:1: expected  0 pragma arguments, got 1

Done.
